fix: some gaps

--- a/components/Sponsors/sponsors.module.scss
+++ b/components/Sponsors/sponsors.module.scss
@@ -110,6 +110,12 @@
         display: none; 
       }
 
+      @media screen and (max-width: 925px) {
+        .other{
+          display: none;
+        }
+      }
+
       @media screen and (max-width: 768px) {
         height: calc(100% - 140px);
       }
